# versions

./: .buildconfig  .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE_OPTIONS.md  DEPLOYMENT_PROGRESS_UPDATE.md  DEPLOYMENT_STATUS.md  DNS_SETUP_GUIDE.md  Dockerfile  GEMINI.md  HACKATHON_SUBMISSION.md  Makefile  QUICK_START.md  README.md  SUBMIT_NOW.md  WARP.md  deploy_to_snel.sh  kilo.json  netlify.toml  next.config.ts  package-lock.json  package.json  proxy-server.js  railway.toml  start-demo.sh  test-server.sh  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
audio_files/: README.md
config/: .env.example
data/: .gitignore  versions.db
data/migrations/: 001_initial.sql  002_lepton_schema.sql  003_add_rating_count.sql  004_settlement_legs_created_at.sql  005_submission_cover_svg.sql  006_listen_events.sql  007_agent_reviews.sql  008_ar_playlists.sql
docs/: API.md  API_REFERENCE.md  ARBITRUM_INTEGRATION.md  ARCHITECTURE.md  DEMO_SCRIPT.md  DEMO_WALKTHROUGH.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_READY.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  ELEVENHACKS_IMPLEMENTATION_PLAN.md  ENVIRONMENT_VARIABLES.md  FILECOIN_INTEGRATION_STATUS.md  GETTING_STARTED.md  HETZNER_DEPLOYMENT.md  LEPTON_API.md  LEPTON_IMPLEMENTATION_PLAN.md  LEPTON_STRATEGY.md  PROJECT_STRUCTURE.md  ROADMAP.md  SERVER_ASSESSMENT_SNEL.md  USER_FLOW.md  USER_GUIDE.md  UX_ENHANCEMENTS.md  VIDEO_SCRIPT.md
experiments/wasm-tui-poc/: Cargo.toml  README.md  index.html
experiments/wasm-tui-poc/src/: lib.rs
lib/: Cargo.toml
lib/examples/: web3_integration.rs
lib/src/: common.rs  distributed.rs  lib.rs  onchain.rs  player.rs  track.rs  utils.rs  web3.rs
playback/: Cargo.toml
proxy/: .gitignore  db.js  migrate.js
scripts/: README.md  build.js  build_termusic.sh  create-pgvector-extension.sql  demo.ts  deploy.sh  doctor.sh  generate_test_audio.rs  ingest.js  make-favicon-ico.js  purge-legacy-placement-briefs.apply.sql  purge-legacy-placement-briefs.preview.sql  rename-placement-briefs-columns.sql  seed-catalog.ts  seed-demo.js  seed-pending.js  smoke-day3.js  smoke-day4.js  smoke-day5.js  test-arc-live.sh  test_api.sh  test_creator_dashboard.sh  test_filecoin_integration.sh  test_real_filecoin_integration.sh  test_server.sh  verify_build.sh  verify_deployment_ready.sh
server/: Cargo.toml  Cargo_minimal.toml  README.md
server/migrations/: 001_initial_schema.sql  002_hackathon_audius_solana.sql
server/src/: audio_service.rs  cli.rs  database.rs  database_simple.rs  distributed_service.rs  farcaster_service.rs  filecoin_service.rs  ipc_service.rs  minimal_server.rs  music_player_service.rs  onchain_service.rs  providers.rs  rest_api.rs  script_service.rs  server.rs  web3_service.rs
tui/: Cargo.toml
web/: README.md  _headers  _redirects  api-client.js  app.js  artist.html  audio-player.js  audius-solana.js  config.js  creator-helpers.js  farcaster-miniapp.js  farcaster.js  filecoin-integration.js  index-modular.html  index.html  netlify.toml  package-lock.json  package.json  terminal-index.html  terminal-shared.css  theme-bridge.js  tsconfig.json  vercel.json  wallet-connection.js
(+254 files in other folders)
