[package]
name = "termusic-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "VERSIONS - Server component for version-centric music platform with gRPC API and web services."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true


[[bin]]
name = "versions-server"
path = "src/server.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
termusic-lib.workspace = true # = {path = "../lib/"}
termusic-playback = { workspace = true, default-features = false }
anyhow.workspace = true
ctrlc.workspace = true
log.workspace = true
flexi_logger.workspace = true
colored.workspace = true
parking_lot.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
clap.workspace = true
# Web framework for REST API
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde_json.workspace = true
# Blockchain dependencies
ethers.workspace = true
ipfs-api-backend-hyper.workspace = true
# PREVENT BLOAT: Minimal HTTP client for Farcaster API
reqwest = { version = "0.12", features = ["json"] }
# PREVENT BLOAT: Minimal base64 for audio uploads
base64 = "0.22"


[features]
# NOTE: this package fails to compile if not one of the backends (rusty, gst, mpv) are compiled in!
default = []
# # left for debug
# default = ["mpv"]
# default = ["gst"]
gst = ["termusic-playback/gst"]
mpv = ["termusic-playback/mpv"]
# rusty = ["termusic-playback/rusty"]
rusty-soundtouch = ["termusic-playback/rusty-soundtouch"]
rusty-simd = ["termusic-playback/rusty-simd"]
all-backends = ["gst", "mpv", "rusty-soundtouch"]
